--- a/build.default.properties
+++ b/build.default.properties
@@ -28,11 +28,11 @@ env.GIT_BRANCH = origin/tags/${release.version}
 build.number = ${env.BUILD_NUMBER}
 
 # ApplicationServer Compile Settings --------------------------------------------
-runtime.php.major-version = 5.6
-runtime.php.version = ${runtime.php.major-version}.10
+runtime.php.major-version = 7.0
+runtime.php.version = ${runtime.php.major-version}.0RC5
 runtime.php.run-tests = false
 runtime.ext-appserver.version = 1.0.1
-runtime.pthreads.version = 2.0.10
+runtime.pthreads.version = 3.0.8
 runtime.apcu.version = 4.0.7
 runtime.operator.version = 0.4.1
 runtime.AOP.version = 0.2.2b1
