--- a/src/linux/generic/etc/conf.d/opcache.ini
+++ b/src/linux/generic/etc/conf.d/opcache.ini
@@ -1,7 +1,7 @@
-zend_extension = /opt/appserver/lib/php/extensions/no-debug-zts-20131226/opcache.so
+;zend_extension = /opt/appserver/lib/php/extensions/no-debug-zts-20131226/opcache.so
 
 ; default: 0
-opcache.enable_cli = 1
+;opcache.enable_cli = 1
 
 ;opcache.revalidate_freq = 0
 ;opcache.enable_file_override = 0
